Render names in short view
