# hello-world/api/controllers/hello_world.js
@@ -1,12 +1,14 @@
 const util = require('util');
+const users = require('../../fixtures/users.json');
 const userAlerts = require('../../fixtures/userAlerts.json');
 const messages = require('../../fixtures/messages.json');
 const properties = require('../../fixtures/properties.json');
 const landlords = require('../../fixtures/landlords.json');
 const contracts = require('../../fixtures/contracts.json');
 
-function getMessages(toUserId) {
-  return messages.filter(message => message.toUserId === toUserId);
+function getMessages(userId) {
+  return messages.filter(message =>
+    message.renterUserId === userId || message.landlordUserId === userId);
 }
 
 function messagesToUser(req, res) {
@@ -27,6 +29,35 @@ function getAlertsForRender(renderUserId) {
   );
 }
 
+function extendO(a, b) {
+  let next = Object.keys(a).reduce((c, key) => {
+    c[key] = a[key];
+    return c;
+  }, {});
+
+  return Object.keys(b).reduce((c, key) => {
+    c[key] = b[key];
+    return c;
+  }, next);
+}
+
+function getAlertsForUser(userId) {
+  const alerts = getMessages(userId).concat(
+    userAlerts.filter(alert =>
+      alert.renterUserId === userId || alert.landlordUserId === userId)
+  );
+
+  return alerts.map(alert => {
+    const next = {
+      renterName: users.find(({ id }) => id === alert.renterUserId).name,
+      landlordName: users.find(({ id }) => id === alert.landlordUserId).name,
+      address: properties.find(({ id }) => id === alert.propertyId).address,
+    };
+
+    return extendO(alert, next);
+  });
+}
+
 function getAlertsForLandlord(landlordUserId) {
   const foundLandlord = landlords.find(ll => ll.userId === landlordUserId);
   if (foundLandlord) {
@@ -43,6 +74,14 @@ function findUsersContract(req, res) {
   }  = req.swagger.params;
 
   res.json(getUsersContract(userId.value));
+}
+
+function alertsForUser(req, res) {
+  const {
+    userId,
+  }  = req.swagger.params;
+
+  res.json(getAlertsForUser(userId.value));
 }
 
 function alertsForRenter(req, res) {
@@ -66,4 +105,5 @@ module.exports = {
   alertsForLandlord,
   alertsForRenter,
   messagesToUser,
+  alertsForUser,
 };
